# unraid-arduino-serial-controller

./: .gitignore  ArduinoSerialController.page  ArduinoSerialControllerSettings.page  LICENSE  README.md  SETUP_GUIDE.md  ajax.php  arduino-serial-controller.plg  arduino-serial-controller.spec  arduino_serial_controller.py  build.sh  build_verify.sh  curl.tower.local.txt  main.py  pyproject.toml  rc.arduino-serial-controller  unraid-status-api.plg
.github/workflows/: build-release.yml  build_release.yml  main.yml
arduino_unraid_status_monitor/: arduino_unraid_status_monitor.ino
examples/arduino_demo/: arduino_demo.ino
src/: mkpkg
